Fixed a styling issue, where the padding overlapped the header

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -287,7 +287,7 @@ h5 {
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
-  padding-top: 20px;
+  padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
   font-weight: bold;
@@ -302,7 +302,7 @@ h6 {
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
-  padding-top: 20px;
+  padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
   font-weight: bold;
